load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle_binary")

gazelle_binary(
    name = "gazelle",
    languages = [
        "@bazel_gazelle//language/go:go_default_library",
        "@bazel_gazelle//language/proto:go_default_library",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["cloudprober.go"],
    importpath = "github.com/yext/cloudprober",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//config/proto:go_default_library",
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//probes:go_default_library",
        "//servers:go_default_library",
        "//surfacers:go_default_library",
        "//sysvars:go_default_library",
        "//targets/lameduck:go_default_library",
        "//targets/rds/server:go_default_library",
        "//targets/rtc/rtcreporter:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_yext_glog//:go_default_library",
    ],
)

# gazelle:exclude .examples
# gazelle:go_proto_compilers @io_bazel_rules_go//proto:gogo_proto
# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:gogo_grpc
# gazelle:prefix github.com/yext/cloudprober
# gazelle:proto_import_prefix github.com/yext/cloudprober
# gazelle:proto_strip_import_prefix /
# gazelle:resolve proto proto github.com/yext/cloudprober/config/proto/config.proto //config/proto:cloudprober_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/metrics/proto/dist.proto //metrics/proto:cloudprober_metrics_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/probes/dns/proto/config.proto //probes/dns/proto:cloudprober_probes_dns_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/probes/external/proto/config.proto //probes/external/proto:cloudprober_probes_external_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/probes/http/proto/config.proto //probes/http/proto:cloudprober_probes_http_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/probes/ping/proto/config.proto //probes/ping/proto:cloudprober_probes_ping_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/probes/proto/config.proto //probes/proto:cloudprober_probes_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/probes/udp/proto/config.proto //probes/udp/proto:cloudprober_probes_udp_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/probes/udplistener/proto/config.proto //probes/udplistener/proto:cloudprober_probes_udplistener_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/servers/grpc/proto/config.proto //servers/grpc/proto:cloudprober_servers_grpc_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/servers/http/proto/config.proto //servers/http/proto:cloudprober_servers_http_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/servers/proto/config.proto //servers/proto:cloudprober_servers_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/servers/udp/proto/config.proto //servers/udp/proto:cloudprober_servers_udp_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/surfacers/file/proto/config.proto //surfacers/file/proto:cloudprober_surfacer_file_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/surfacers/postgres/proto/config.proto //surfacers/postgres/proto:cloudprober_surfacer_postgres_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/surfacers/prometheus/proto/config.proto //surfacers/prometheus/proto:cloudprober_surfacer_prometheus_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/surfacers/proto/config.proto //surfacers/proto:cloudprober_surfacer_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/surfacers/stackdriver/proto/config.proto //surfacers/stackdriver/proto:cloudprober_surfacer_stackdriver_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/targets/gce/proto/config.proto //targets/gce/proto:cloudprober_targets_gce_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/targets/lameduck/proto/config.proto //targets/lameduck/proto:cloudprober_targets_lameduck_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/targets/proto/targets.proto //targets/proto:cloudprober_targets_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/targets/rds/client/proto/config.proto //targets/rds/client/proto:cloudprober_targets_rds_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/targets/rds/proto/rds.proto //targets/rds/proto:cloudprober_targets_rds_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/targets/rds/server/gcp/proto/config.proto //targets/rds/server/gcp/proto:cloudprober_targets_rds_gcp_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/targets/rds/server/proto/config.proto //targets/rds/server/proto:cloudprober_targets_rds_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/targets/rtc/proto/config.proto //targets/rtc/proto:cloudprober_targets_rtc_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/targets/rtc/rtcreporter/proto/rtcreporter.proto //targets/rtc/rtcreporter/proto:cloudprober_targets_rtcreporter_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/validators/http/proto/config.proto //validators/http/proto:cloudprober_validators_http_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/validators/integrity/proto/config.proto //validators/integrity/proto:cloudprober_validators_integrity_proto
# gazelle:resolve proto proto github.com/yext/cloudprober/validators/proto/config.proto //validators/proto:cloudprober_validators_proto

# gazelle:resolve go go github.com/yext/cloudprober/config/proto //config/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/message/proto //message/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/metrics/proto //metrics/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/probes/dns/proto //probes/dns/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/probes/external/proto //probes/external/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/probes/http/proto //probes/http/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/probes/ping/proto //probes/ping/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/probes/proto //probes/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/probes/testdata //probes/testdata:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/probes/udp/proto //probes/udp/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/probes/udplistener/proto //probes/udplistener/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/servers/grpc/proto //servers/grpc/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/servers/http/proto //servers/http/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/servers/proto //servers/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/servers/udp/proto //servers/udp/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/surfacers/file/proto //surfacers/file/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/surfacers/postgres/proto //surfacers/postgres/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/surfacers/prometheus/proto //surfacers/prometheus/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/surfacers/proto //surfacers/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/surfacers/stackdriver/proto //surfacers/stackdriver/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/gce/proto //targets/gce/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/lameduck/proto //targets/lameduck/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/proto //targets/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/rds/client/proto //targets/rds/client/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/rds/proto //targets/rds/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/rds/server/gcp/proto //targets/rds/server/gcp/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/rds/server/proto //targets/rds/server/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/rtc/proto //targets/rtc/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/rtc/rtcreporter/proto //targets/rtc/rtcreporter/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/targets/testdata //targets/testdata:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/validators/http/proto //validators/http/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/validators/integrity/proto //validators/integrity/proto:go_default_library
# gazelle:resolve go go github.com/yext/cloudprober/validators/proto //validators/proto:go_default_library
