load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/yext/cloudprober/config",
    visibility = ["//visibility:public"],
    deps = [
        "//config/proto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_google_cloud_go//compute/metadata:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
)
