load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logger.go"],
    importpath = "github.com/yext/cloudprober/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_yext_glog//:go_default_library",
        "@com_google_cloud_go_compute_metadata//:go_default_library",
        "@com_google_cloud_go_logging//:go_default_library",
        "@org_golang_google_genproto_googleapis_api//monitoredres:monitoredres",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)
