load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["servers.go"],
    importpath = "github.com/yext/cloudprober/servers",
    visibility = ["//visibility:public"],
    deps = [
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//servers/grpc:go_default_library",
        "//servers/http:go_default_library",
        "//servers/proto:go_default_library",
        "//servers/udp:go_default_library",
        "//web/formatutils:go_default_library",
    ],
)
