load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cloudprober_proto",
    srcs = ["config.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//probes/proto:proto_proto",
        "//servers/proto:proto_proto",
        "//surfacers/proto:proto_proto",
        "//targets/proto:proto_proto",
        "//targets/rds/server/proto:proto_proto",
        "//targets/rtc/rtcreporter/proto:proto_proto",
    ],
)

go_proto_library(
    name = "cloudprober_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogo_proto"],
    importpath = "github.com/yext/cloudprober/config/proto",
    proto = ":cloudprober_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//probes/proto:go_default_library",
        "//servers/proto:go_default_library",
        "//surfacers/proto:go_default_library",
        "//targets/proto:go_default_library",
        "//targets/rds/server/proto:go_default_library",
        "//targets/rtc/rtcreporter/proto:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":cloudprober_go_proto"],
    importpath = "github.com/yext/cloudprober/config/proto",
    visibility = ["//visibility:public"],
)
