load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cloudprober_proto",
    srcs = ["config.proto"],
    import_prefix = "github.com/yext/cloudprober",
    strip_import_prefix = "/",
    visibility = ["//visibility:public"],
    deps = [
        "//probes/proto:cloudprober_probes_proto",
        "//servers/proto:cloudprober_servers_proto",
        "//surfacers/proto:cloudprober_surfacer_proto",
        "//targets/proto:cloudprober_targets_proto",
        "//targets/rds/server/proto:cloudprober_targets_rds_proto",
        "//targets/rtc/rtcreporter/proto:cloudprober_targets_rtcreporter_proto",
    ],
)

go_proto_library(
    name = "cloudprober_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogo_proto"],
    importpath = "github.com/yext/cloudprober/config/proto",
    proto = ":cloudprober_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//probes/proto:go_default_library",
        "//servers/proto:go_default_library",
        "//surfacers/proto:go_default_library",
        "//targets/proto:go_default_library",
        "//targets/rds/server/proto:go_default_library",
        "//targets/rtc/rtcreporter/proto:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["config.pb.go"],
    importpath = "github.com/yext/cloudprober/config/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//probes/proto:go_default_library",
        "//servers/proto:go_default_library",
        "//surfacers/proto:go_default_library",
        "//targets/proto:go_default_library",
        "//targets/rds/server/proto:go_default_library",
        "//targets/rtc/rtcreporter/proto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
    ],
)
