load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["runconfig.go"],
    importpath = "github.com/yext/cloudprober/config/runconfig",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_grpc//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["runconfig_test.go"],
    embed = [":go_default_library"],
    deps = ["@org_golang_google_grpc//:go_default_library"],
)
