load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cloudprober_metrics_proto",
    srcs = ["dist.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "cloudprober_metrics_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogo_proto"],
    importpath = "github.com/yext/cloudprober/metrics/proto",
    proto = ":cloudprober_metrics_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":cloudprober_metrics_go_proto"],
    importpath = "github.com/yext/cloudprober/metrics/proto",
    visibility = ["//visibility:public"],
)
