load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "icmpconn.go",
        "ping.go",
        "pingutils.go",
    ],
    importpath = "github.com/yext/cloudprober/probes/ping",
    visibility = ["//visibility:public"],
    deps = [
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//probes/options:go_default_library",
        "//probes/ping/proto:go_default_library",
        "//probes/probeutils:go_default_library",
        "//validators:go_default_library",
        "//validators/integrity:go_default_library",
        "@org_golang_x_net//icmp:go_default_library",
        "@org_golang_x_net//ipv4:go_default_library",
        "@org_golang_x_net//ipv6:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ping_test.go",
        "pingutils_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//probes/options:go_default_library",
        "//probes/ping/proto:go_default_library",
        "//targets:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_yext_glog//:go_default_library",
        "@org_golang_x_net//icmp:go_default_library",
        "@org_golang_x_net//ipv4:go_default_library",
        "@org_golang_x_net//ipv6:go_default_library",
    ],
)
