load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "cloudprober_probes_proto",
    srcs = ["config.proto"],
    import_prefix = "github.com/yext/cloudprober",
    strip_import_prefix = "/",
    visibility = ["//visibility:public"],
    deps = [
        "//metrics/proto:cloudprober_metrics_proto",
        "//probes/dns/proto:cloudprober_probes_dns_proto",
        "//probes/external/proto:cloudprober_probes_external_proto",
        "//probes/http/proto:cloudprober_probes_http_proto",
        "//probes/ping/proto:cloudprober_probes_ping_proto",
        "//probes/udp/proto:cloudprober_probes_udp_proto",
        "//probes/udplistener/proto:cloudprober_probes_udplistener_proto",
        "//targets/proto:cloudprober_targets_proto",
        "//validators/proto:cloudprober_validators_proto",
    ],
)

go_proto_library(
    name = "cloudprober_probes_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogo_proto"],
    importpath = "github.com/yext/cloudprober/probes/proto",
    proto = ":cloudprober_probes_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//metrics/proto:go_default_library",
        "//probes/dns/proto:go_default_library",
        "//probes/external/proto:go_default_library",
        "//probes/http/proto:go_default_library",
        "//probes/ping/proto:go_default_library",
        "//probes/udp/proto:go_default_library",
        "//probes/udplistener/proto:go_default_library",
        "//targets/proto:go_default_library",
        "//validators/proto:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["config.pb.go"],
    importpath = "github.com/yext/cloudprober/probes/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//metrics/proto:go_default_library",
        "//probes/dns/proto:go_default_library",
        "//probes/external/proto:go_default_library",
        "//probes/http/proto:go_default_library",
        "//probes/ping/proto:go_default_library",
        "//probes/udp/proto:go_default_library",
        "//probes/udplistener/proto:go_default_library",
        "//targets/proto:go_default_library",
        "//validators/proto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
    ],
)
