load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["grpc.go"],
    importpath = "github.com/yext/cloudprober/servers/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//config/runconfig:go_default_library",
        "//logger:go_default_library",
        "//metrics:go_default_library",
        "//probes/probeutils:go_default_library",
        "//servers/grpc/proto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//health:go_default_library",
        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["grpc_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//config/runconfig:go_default_library",
        "//logger:go_default_library",
        "//servers/grpc/proto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
